Se ajusto imagenes largas

--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -706,7 +706,7 @@
                         <div class="row">
                             <div class="col-12 text-center d-flex align-items-center justify-content-center mt-2">
                                 <img class="img-next-back" src="../img/back.png" alt="anterior"  width="2%" height="40%">
-                                <img class="mr-4 ml-4 img-play" src="../img/play.png" width="8%" height="100%">
+                                <img class="mr-4 ml-4 img-play" src="../img/pausa.png" width="8%" height="100%">
                                 <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
                                 <div class="sound">
                                 <img src="../img/sonido-musical.png" alt="sonido" height="22px">
