added demo apge

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="row landing-demo-button-row-desk pt-5">
                         <div class="col-sm-6 d-sm-flex justify-content-start align-items-start">
                             <div class="w-100">
-                                <a href="html/home.html">
+                                <a href="html/home-demo.html">
                                     <button type="button" style="width: 100%;" class="btn access-button">
                                         INICIAR PRUEBA
                                     </button>
