--- a/html/explorar.html
+++ b/html/explorar.html
@@ -380,42 +380,42 @@
 
                 <!-- MUSICA SEGUN TU LUGAR -->
                     <h5 class="ml-3 mt-3 mb-2 c-white">MÚSICA SEGÚN TU LUGAR</h5>
-                <div class="row mt-2 ml-3">
+                <div class="row mt-2 ml-3 efecto-carrousel">
                     <!-- LO ULTIMO -->
                   
                     <!--  CARRUSEL 1-->
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/maleta.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">TRABAJO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/casaGrande.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">CASA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/gimnasio.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">GIMNASIO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/luna.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DORMIR</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/avion.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">VIAJE</h5>
@@ -430,12 +430,12 @@
                     <h5 class="ml-3 mt-4 c-white">CATEGORIAS</h5>
                 <!-- FIN TITULO CATEGORIA -->
 
-                <div class="row mt-2 ml-3">
+                <div class="row mt-2 ml-3 efecto-carrousel">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
                                 <a href="explorar-categoria-seleccionada.html">
-                                    <div class="img-fondo efecto-hover">
+                                    <div class="img-fondo ">
                                         <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                     </div>
                                 </a>
@@ -443,28 +443,28 @@
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -474,39 +474,39 @@
 
                 </div>
 
-                <div class="row ml-3">
+                <div class="row ml-3 mt-4 efecto-carrousel">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -516,39 +516,39 @@
 
                 </div>
 
-                <div class="row ml-3">
+                <div class="row ml-3 mt-4 efecto-carrousel">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -558,39 +558,39 @@
 
                 </div>
 
-                <div class="row ml-3">
+                <div class="row ml-3 mt-4 efecto-carrousel">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -600,39 +600,39 @@
 
                 </div>
 
-                <div class="row ml-3">
+                <div class="row ml-3 mt-4 mb-5 efecto-carrousel">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
+                                <div class="img-fondo ">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
