agregado efecto flip

--- a/html/explorar.html
+++ b/html/explorar.html
@@ -348,7 +348,7 @@
             <div class="col-2">
                 <div class="fixed">
                     <div class="row title-nav">
-                        <h4 class="c-lBlue">SPOILER FIVE</h4>
+                        <h4 class="c-lBlue mt-3">SPOILER FIVE</h4>
                     </div>
                     <div class="row navs c-ico">
                         <div class="col-12 text-center mt-4">
