--- a/html/home.html
+++ b/html/home.html
@@ -339,14 +339,14 @@
                 <div class="row navs c-ico">
                     <div class="col-12 text-center mt-4 fixed">
                         <a href="explorar.html"><img src="../img/explorar_gris.png" width="20%" height="30%"></a>
-                        <h6>EXPLORAR</h6> 
+                        <h6 class="mt-2">EXPLORAR</h6> 
                     </div>  
                 </div>
 
                 <div class="row navs c-ico">
                     <div class="col-12 text-center mt-4 fixed">
                         <a href="biblioteca.html"><img src="../img/libro.png" width="20%" height="30%"></a>
-                        <h6>MI BIBLIOTECA</h6> 
+                        <h6 class="mt-2">MI BIBLIOTECA</h6> 
                     </div>  
                 </div>
 
@@ -1439,70 +1439,70 @@
 
 
             <!-- FOOTER -->
-    <div class="footerDesk col-md-12 d-none d-sm-block">
-        <div class="row">
-            <div class="col-3 pl-0">
+            <div class="footerDesk col-md-12 d-none d-sm-block">
                 <div class="row">
-                    <div class="col-6">
-                    <a href="reproductor.html">
-                        <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
-                    </a>
+                    <div class="col-3 pl-0">
+                        <div class="row h-100">
+                            <div class="col-5">
+                                <a href="reproductor.html">
+                                    <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="90%">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <a href="reproductor.html">
+                                        <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                    </a>
+                                    <button class="btn-like ml-3 mt-1" id="btnLike">
+                                        <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
+                                    </button>
+                                </div>
+                                <div class="row mt-3">
+                                    <p class="ml-1 mt-4 mb-0 c-white">Paulo londra</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-6">
                         <div class="row">
-                            <a href="reproductor.html">
-                                <h6 class="c-white ml-1 mt-1">Tal vez</h6>
-                            </a>
-                            <button class="btn-like ml-3 mt-1" id="btnLike">
-                                <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
-                            </button>
+                            <div class="col-12 text-center d-flex align-items-center justify-content-center pt-3">
+                                <img class="img-next-back" src="../img/back.png" alt="anterior"  width="2%" height="40%">
+                                <img class="mr-4 ml-4 img-play" src="../img/play-arrow.png" width="8%" height="100%">
+                                <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
+                                <div class="sound">
+                                <img src="../img/sonido-musical.png" alt="sonido" height="22px">
+                                </div>
+                            </div>
                         </div>
+                            <!-- <div class="col-12 d-flex justify-content-end">
+                                <img src="../img/sonido-musical.png" alt="sonido" height="22px">
+                            </div> -->
                         <div class="row mt-3">
-                            <p class="ml-1 mt-4 mb-0 c-white">Paulo londra</p>
+                            <div class="reproductor col-12 pl-0 mt-1">
+                                <div class="w-100 h-100 bg-white col-8">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="row h-100">
+                            <div class="col-sm-12 mt-4 mb-5 vote-container">
+                                <div class="vote-text">
+                                    <h5>CALIFICA ESTE AUDIO</h5>
+                                </div>
+                                <div class="ml-3 star-container">
+                                    <img  src="../img/estrella_va.png" class="star" alt="star">
+                                    <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
+                                    <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
+                                    <img  src="../img/estrella_va.png" class="ml-2 star"  alt="star">
+                                    <img  src="../img/estrella_va.png" class="mr-2 ml-2 star" alt="star">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-12 text-center d-flex align-items-center justify-content-center mt-2">
-                        <img class="img-next-back" src="../img/back.png" alt="anterior"  width="2%" height="40%">
-                        <img class="mr-4 ml-4 img-play" src="../img/play.png" width="8%" height="100%">
-                        <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
-                        <div class="sound">
-                        <img class="sound-img" src="../img/sonido-musical.png" alt="sonido" height="22px">
-                        </div>
-                    </div>
-                </div>
-                    <!-- <div class="col-12 d-flex justify-content-end">
-                        <img src="../img/sonido-musical.png" alt="sonido" height="22px">
-                    </div> -->
-                <div class="row mt-3">
-                    <div class="reproductor col-12 pl-0 mt-1">
-                        <div class="w-100 h-100 bg-white col-8">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="row h-100">
-                    <div class="col-sm-12 mt-4 mb-5 vote-container">
-                        <div class="vote-text">
-                            <h5>CALIFICA ESTE AUDIO</h5>
-                        </div>
-                        <div class="ml-3 star-container">
-                            <img  src="../img/estrella_va.png" class="star" alt="star">
-                            <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
-                            <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
-                            <img  src="../img/estrella_va.png" class="ml-2 star"  alt="star">
-                            <img  src="../img/estrella_va.png" class="mr-2 ml-2 star" alt="star">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <section >
+        <section >
 		<div class="comments-container hide">
 			<div class="comment-header-container">
 				<div class="comment-image-container">
