--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -681,11 +681,11 @@
             <div class="footerDesk col-md-12 d-none d-sm-block">
                 <div class="row">
                     <div class="col-3 pl-0">
-                        <div class="row">
-                            <div class="col-6">
-                            <a href="reproductor.html">
-                                <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
-                            </a>
+                        <div class="row h-100">
+                            <div class="col-5">
+                                <a href="reproductor.html">
+                                    <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="90%">
+                                </a>
                             </div>
                             <div class="col-6">
                                 <div class="row">
@@ -704,9 +704,9 @@
                     </div>
                     <div class="col-6">
                         <div class="row">
-                            <div class="col-12 text-center d-flex align-items-center justify-content-center mt-2">
+                            <div class="col-12 text-center d-flex align-items-center justify-content-center pt-3">
                                 <img class="img-next-back" src="../img/back.png" alt="anterior"  width="2%" height="40%">
-                                <img class="mr-4 ml-4 img-play" src="../img/pausa.png" width="8%" height="100%">
+                                <img class="mr-4 ml-4 img-play" src="../img/play-arrow.png" width="8%" height="100%">
                                 <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
                                 <div class="sound">
                                 <img src="../img/sonido-musical.png" alt="sonido" height="22px">
