--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -346,7 +346,7 @@
                         </div>
                     </div>
                         <!--  CARRUSEL 1--> 
-                        <div class="carousel-inner">     
+                        <div class="carousel-inner efecto-carrousel">     
                             <div class="carousel-item active" data-interval="20000">
                                 <div class="row card-deck mt-1">
                                     <!-- card 1 -->
@@ -627,7 +627,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="carousel-inner">     <!--  CARRUSEL 1--> 
+                            <div class="carousel-inner efecto-carrousel">     <!--  CARRUSEL 1--> 
                             <div class="carousel-item active" data-interval="20000">
                                 <div class="row card-deck mt-1">
                                     <!-- card 1 -->
@@ -908,7 +908,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="carousel-inner">     <!--  CARRUSEL 1--> 
+                            <div class="carousel-inner efecto-carrousel">     <!--  CARRUSEL 1--> 
                             <div class="carousel-item active" data-interval="20000">
                                 <div class="row card-deck mt-1">
                                    <!-- card 1 -->
