--- a/html/explorar.html
+++ b/html/explorar.html
@@ -380,7 +380,7 @@
 
                 <!-- MUSICA SEGUN TU LUGAR -->
                     <h5 class="ml-3 mt-3 mb-2 c-white">MÚSICA SEGÚN TU LUGAR</h5>
-                <div class="row mt-2 ml-3 efecto-carrousel">
+                <div class="row mt-2 ml-3 ">
                     <!-- LO ULTIMO -->
                   
                     <!--  CARRUSEL 1-->
@@ -430,7 +430,7 @@
                     <h5 class="ml-3 mt-4 c-white">CATEGORIAS</h5>
                 <!-- FIN TITULO CATEGORIA -->
 
-                <div class="row mt-2 ml-3 efecto-carrousel">
+                <div class="row mt-2 ml-3">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
@@ -474,7 +474,7 @@
 
                 </div>
 
-                <div class="row ml-3 mt-4 efecto-carrousel">
+                <div class="row ml-3 mt-4 ">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
@@ -516,7 +516,7 @@
 
                 </div>
 
-                <div class="row ml-3 mt-4 efecto-carrousel">
+                <div class="row ml-3 mt-4">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
@@ -558,7 +558,7 @@
 
                 </div>
 
-                <div class="row ml-3 mt-4 efecto-carrousel">
+                <div class="row ml-3 mt-4 ">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
@@ -600,7 +600,7 @@
 
                 </div>
 
-                <div class="row ml-3 mt-4 mb-5 efecto-carrousel">
+                <div class="row ml-3 mt-4 mb-5">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
