--- a/html/home.html
+++ b/html/home.html
@@ -643,7 +643,7 @@
                     <div id="carouselExampleIntervalTwo" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="ml-3 c-white">ESCUCHADOS RECIENTEMENTES</h5>
+                            <h5 class="ml-3 c-white">ESCUCHADOS RECIENTEMENTE</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalTwo" role="button" data-slide="prev">
@@ -656,7 +656,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="carousel-inner">     <!--  CARRUSEL 1--> 
+                    <div class="carousel-inner efecto-carrousel">     <!--  CARRUSEL 1--> 
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <!-- card 1 -->
@@ -937,7 +937,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="carousel-inner">     <!--  CARRUSEL 1--> 
+                    <div class="carousel-inner efecto-carrousel">     <!--  CARRUSEL 1--> 
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                            <!-- card 1 -->
